[package]
name = "simple_chat_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.57"
bincode = "1.3.3"
futures = "0.3.24"
serde = {version = "1.0.145", features = ["derive"]}
smol = "1.2.5"
rust_state_machine = { version = "0.1.0", path = "../Rust_FSM/rust_state_machine" } # https://github.com/ArneCJacobs/Rust_FSM.git
